syntax = "proto3";

package request;

message IndexRequest {
    string dataType = 1;
    string objectIdentifier = 2;
}