syntax = "proto3";

package response;

message IndexResponse {
    string lensIdentifier = 1;
    bytes data = 2;
}