syntax = "proto3";

import "request.proto";
import "response.proto"; 

service IndexerAPI {
    rpc SubmitIndexRequest(request.IndexRequest) returns (response.IndexResponse) {}
} 